Fix Java 8 API compatibility